--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,84 @@
-.App {
-  text-align: center;
+body {
+  background-color: rgb(55, 52, 49);
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+nav {
   display: flex;
-  flex-direction: column;
+  background-color: rgb(55, 52, 49);
+  height: 75px;
+  justify-content: space-around;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  z-index: 1;
+  position: relative;
+}
+ul {
+  display: flex;
+  justify-content: space-evenly;
+  width: 30%;
+}
+ul li {
   color: white;
+  font-size: 20px;
+}
+li {
+  cursor: pointer;
+}
+.start {
+  color: rgb(250, 200, 46);
+  font-weight: bolder;
+  font-size: 28px;
+  font-family: cursive;
+}
+.menbtn {
+  color: white;
+  width: 100px;
+  height: 50px;
+  background-color: rgb(250, 200, 46);
+  display: none
+}
+.bar1 {
+  width: 35px;
+  height: 5px;
+  background-color: #333;
+  margin: 6px 0;
+  transition: 0.4s
+}
+.bar2 {
+  width: 35px;
+  height: 5px;
+  background-color: #333;
+  margin: 6px 0;
+  transition: 0.4s
+}
+.bar3 {
+  width: 35px;
+  height: 5px;
+  background-color: #333;
+  margin: 6px 0;
+  transition: 0.4s
+}
+menu {
+  width: 100vw;
+  height: 200px;
+  background: rgb(45, 51, 56);
+  transform: translateY(-275px);
+  transition: transform .5s;
+  z-index: 0;
+  position: relative;
+  color: white;
+  display: none;
+}
+.menu-open {
+  transform: translateY(0px);
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@media (max-width: 982px) {
+  .nav-links {
+    display: none;
   }
-  to {
-    transform: rotate(360deg);
+  menu {
+    display: block;
+  }
+  .menbtn {
+    display: block
   }
 }
