--- a/src/App.css
+++ b/src/App.css
@@ -21,11 +21,12 @@ ul li {
 }
 li {
   cursor: pointer;
+  padding: 10px
 }
 .start {
   color: rgb(250, 200, 46);
   font-weight: bolder;
-  font-size: 28px;
+  font-size: 35px;
   font-family: cursive;
 }
 .menbtn {
@@ -33,27 +34,14 @@ li {
   width: 100px;
   height: 50px;
   background-color: rgb(250, 200, 46);
+  align-items: center;
   display: none
 }
-.bar1 {
+.bars {
   width: 35px;
-  height: 5px;
+  height: 3px;
   background-color: #333;
-  margin: 6px 0;
-  transition: 0.4s
-}
-.bar2 {
-  width: 35px;
-  height: 5px;
-  background-color: #333;
-  margin: 6px 0;
-  transition: 0.4s
-}
-.bar3 {
-  width: 35px;
-  height: 5px;
-  background-color: #333;
-  margin: 6px 0;
+  margin: 6px;
   transition: 0.4s
 }
 menu {
@@ -79,6 +67,12 @@ menu {
     display: block;
   }
   .menbtn {
-    display: block
+    display: flex;
+  }
+  h3 {
+    margin: 3px
+  }
+  ul {
+    flex-direction: column;
   }
 }
